--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,7 +1,23 @@
-version: 2.1
-orbs:
-  node: circleci/node@3.0.0
-workflows:
-  node-tests:
-    jobs:
-      - node/test
+version: 2
+jobs:
+  build:
+    docker:
+    - image: circleci/node:14.15.4
+    working_directory: ~/repo
+    steps:
+    - checkout
+    - restore_cache:
+        keys:
+        - v1-dependencies-{{ checksum "package.json" }}
+        - v1-dependencies-
+
+    - run: yarn install
+
+    - save_cache:
+        paths:
+        - node-modules
+        key: v1-dependencies-{{ checksum "package.json" }}
+
+    - run: yarn test
+
+
